# solana_first

./: .gitignore  Cargo.toml  README.md  snipped.md  snippets.md
code/called/: Cargo.toml
code/called/src/: lib.rs
code/caller/: Cargo.toml
code/caller/src/: lib.rs
tests/: Cargo.toml
tests/src/: cpi_program_test.rs  cpi_validator_test.rs  lib.rs
