[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
called = { path = "../code/called" }
caller = { path = "../code/caller" }
tokio = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }



